# Egui.NET

./: .gitattributes  .gitignore  Cargo.toml  Egui.NET.sln  LICENSE  README.md  docfx.json  rust-toolchain.toml
.github/workflows/: generate-docs.yml
Egui/: Align2.cs  AllocatedAtomLayout.cs  Array.cs  Atom.cs  AtomKind.cs  AtomLayoutResponse.cs  Atoms.cs  CentralPanel.cs  Checkbox.cs  Class1.cs  Color32.cs  ColorImage.cs  Context.cs  DragPanButtons.cs  DragValue.cs  EPos2.cs  EVec2.cs  EVec2b.cs  Egui.csproj  EguiBindings.cs  EguiCallback.cs  EguiFfi.cs  EguiHandle.cs  EguiHelpers.cs  EguiMarshal.cs  EguiObject.cs  FontDefinitions.cs  Fonts.cs  GlobalUsings.cs  Grid.cs  IWidget.cs  Id.cs  Image.cs  InnerResponse.cs  KeyboardShortcut.cs  Memory.cs  MenuBar.cs  Mesh.cs  ModifierNames.cs  MutateDelegate.cs  (+25 more)
Egui/Containers/: Area.cs  AreaState.cs  CentralPanel.cs  CollapsingHeader.cs  CollapsingResponse.cs  CollapsingState.cs  ComboBox.cs  DragPanButtons.cs  Frame.cs  HeaderResponse.cs  Modal.cs  ModalResponse.cs  Popup.cs  PopupAnchor.cs  Resize.cs  Scene.cs  ScrollArea.cs  ScrollAreaOutput.cs  SidePanel.cs  Sides.cs  Tooltip.cs  TopBottomPanel.cs  Window.cs
Egui/Containers/Menu/: MenuButton.cs  MenuState.cs  SubMenu.cs  SubMenuButton.cs
Egui/Ecolor/: EcolorHelpers.cs  HexColor.cs
Egui/Emath/: EmathHelpers.cs
Egui/Epaint/: Color32.cs  Hsva.cs  TextureManager.cs
Egui/Epaint/ShapeTransform/: ShapeTransformHelpers.cs
Egui/Layers/: GraphicLayers.cs
Egui/Load/: Bytes.cs  IBytesLoader.cs
Egui/Text/: Fonts.cs
Egui/Util/: IdTypeMap.cs
Egui/Viewport/: ViewportId.cs
Egui/Widgets/: DragValue.cs  FrameDurations.cs  IWidget.cs  ImageSource.cs  Slider.cs  TextEdit.cs
egui_capi/: Cargo.toml
egui_capi.old/: Cargo.old.toml
egui_capi.old/ag/: Bindings.g.cs  Egui.g.cs
egui_capi/ag/: Gui.g.cs  egui.rs  gui.rs
egui_capi/src/: lib.rs
egui_net/: Cargo.toml  build.rs  progress_report.txt
egui_net/g/Egui/: Align.cs  Align2.cs  AreaState.cs  CCursor.cs  CCursorRange.cs  Color32.cs  ColorImage.cs  CornerRadius.cs  Cursor.cs  CursorGrab.cs  CursorIcon.cs  CursorRange.cs  DebugOptions.cs  Direction.cs  DroppedFile.cs  FontFamily.cs  FontId.cs  Frame.cs  HandleShape.cs  HoveredFile.cs  IMEOutput.cs  IMEPurpose.cs  IconData.cs  Id.cs  ImageFit.cs  ImageOptions.cs  ImeEvent.cs  InputOptions.cs  Interaction.cs  Key.cs  KeyboardShortcut.cs  LayerId.cs  Margin.cs  Modifiers.cs  MouseWheelUnit.cs  NumericColorSpace.cs  OpenUrl.cs  Options.cs  Order.cs  OutputCommand.cs  (+55 more)
egui_net/src/: lib.rs
egui_net_bindgen/: Cargo.toml
egui_net_bindgen/src/: ecolor.json  emath.json  epaint.json  extra.txt  lib.rs  main.rs
egui_net_ffi/: Cargo.toml
egui_net_ffi/src/: lib.rs
examples/SilkEguiController/EguiController/: EguiController.cs  EguiController.csproj
examples/SilkEguiController/EguiControllerExample/: EguiControllerExample.cs  EguiControllerExample.csproj
examples/SilkOpenGl/: Program.cs  SilkOpenGl.csproj  fragment.glsl  vertex.glsl
serde-generate/: Cargo.toml
serde-generate/runtime/csharp/Bincode/: BincodeDeserializer.cs  BincodeSerializer.cs
serde-generate/runtime/csharp/Serde/: BinaryDeserializer.cs  BinarySerializer.cs  DeserializationException.cs  IDeserializer.cs  ISerializer.cs  PrimitiveExtensions.cs  Range.cs  SerializationException.cs  Unit.cs  ValueDictionary.cs  Verification.cs
serde-generate/src/: config.rs  csharp.rs  lib.rs
serde-reflection/src/: de.rs
