[workspace]
members = [
    "egui_net",
    "egui_net_bindgen",
    "serde-generate",
]
default-members = [ "egui_net" ]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]

# Internal dependencies
egui_net = { path = "egui_net" }
egui_net_bindgen = { path = "egui_net_bindgen" }
serde-generate = { path = "serde-generate", default-features = false, features = [ "csharp" ] }

# External dependencies
bincode = { version = "1.3.3", default-features = false }
convert_case = { version = "0.7.1", default-features = false }
csbindgen = { version = "1.9.3", default-features = false }
#egui = { path = "../egui/crates/egui", default-features = false, features = [ "default_fonts", "serde" ] }
egui = { git = "https://github.com/DouglasDwyer/egui", rev = "c7b1bb1e455dc944ea405ba4095fa1f1558e97bd", default-features = false, features = [ "default_fonts", "serde" ] }
mimalloc = { version = "0.1.47", default-features = false }
rustdoc-types = { version = "0.39.0", default-features = false }
serde = { version = "1.0.219", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0.138", default-features = false, features = [ "std" ] }
serde-reflection = { version = "0.5.0", default-features = false }