[workspace]
members = [
    "egui_net",
    "egui_net_bindgen",
    "serde-generate",
]
default-members = [ "egui_net" ]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[profile.release]
codegen-units = 1
incremental = false
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"

[workspace.dependencies]

# Internal dependencies
egui_net = { path = "egui_net" }
egui_net_bindgen = { path = "egui_net_bindgen" }
serde-generate = { path = "serde-generate", default-features = false, features = [ "csharp" ] }

# External dependencies
bincode = { version = "1.3.3", default-features = false }
convert_case = { version = "0.7.1", default-features = false }
csbindgen = { version = "1.9.3", default-features = false }
#egui = { path = "../egui/crates/egui", default-features = false, features = [ "default_fonts", "serde" ] }
egui = { git = "https://github.com/DouglasDwyer/egui", rev = "1133dadb288c88dd583216303dd83f0c45a215ce", default-features = false, features = [ "default_fonts", "serde" ] }
#egui_extras = { path = "../egui/crates/egui_extras", default-features = false, features = [ "image", "svg", "svg_text" ] }
egui_extras = { git = "https://github.com/DouglasDwyer/egui", rev = "1133dadb288c88dd583216303dd83f0c45a215ce", default-features = false, features = [ "image", "svg", "svg_text" ] }
image = { version = "0.25.6", default-features = false, features = [ "default-formats" ] }
mimalloc = { version = "0.1.47", default-features = false }
rustdoc-types = { version = "0.39.0", default-features = false }
serde = { version = "1.0.219", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0.138", default-features = false, features = [ "std" ] }
serde-reflection = { version = "0.5.0", default-features = false }

[workspace.metadata.cross.target]
x86_64-pc-windows-msvc = { image = "i18nsite/x86_64-pc-windows-msvc-cross@sha256:35307f58ade2bc99c295a4f8b88d4cc43ad7617b4c7fc001beb7ee5851135810" }
aarch64-pc-windows-msvc = { image = "i18nsite/aarch64-pc-windows-msvc-cross@sha256:cf5dd0300c2a945cf117d5d55dbb0ea0c9e2fed1feb828065119d96591234f18" }
x86_64-apple-darwin = { image = "i18nsite/x86_64-apple-darwin-cross@sha256:8604955bd3fd7bd5e18f8ad00853101dc90c30c8aaea53130909da58f734c94a" }
aarch64-apple-darwin = { image = "i18nsite/aarch64-apple-darwin-cross@sha256:737bd24b8bc893de2bec133277e4f69c33db725ef02d13c8f1277fe92098ba0d" }