[package]
name = "egui_net"
edition.workspace = true
version.workspace = true

[lib]
crate-type = [ "cdylib" ]

[dependencies]
bincode.workspace = true
egui.workspace = true
egui_extras.workspace = true
image.workspace = true
mimalloc.workspace = true
serde.workspace = true

[build-dependencies]
csbindgen.workspace = true
egui_net_bindgen.workspace = true